AUTO_FILES("." "src" "\\.(cpp|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/libsundaowen" "src" "\\.(cpp|h)$")
include_directories(${DEP_INCLUDE_DIR})
link_directories(${DEP_LIBRARY_DIR})
add_definitions(-DSDW_MAIN -DSDW_XCONVERT)
ADD_EXE(CheckBaiduPCSGoMd5 "${src}")
if(APPLE OR CYGWIN)
  target_link_libraries(CheckBaiduPCSGoMd5 iconv)
endif()
install(TARGETS CheckBaiduPCSGoMd5 DESTINATION bin)
