AUTO_FILES("." "src" "\\.(cpp|h)$")
if(MSVC_VERSION LESS 1600)
  AUTO_FILES("${ROOT_SOURCE_DIR}/msvc" "src" "\\.h$")
endif()
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/libsundaowen" "src" "\\.(cpp|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/tinyxml2" "src" "tinyxml2\\.(cpp|h)$")
include_directories(${DEP_INCLUDE_DIR})
if(MSVC_VERSION LESS 1600)
  include_directories("${ROOT_SOURCE_DIR}/msvc")
endif()
link_directories(${DEP_LIBRARY_DIR})
add_definitions(-DSDW_MAIN -DSDW_XCONVERT)
ADD_EXE(SwitchGamesXlsxTool "${src}")
if(APPLE OR CYGWIN)
  target_link_libraries(SwitchGamesXlsxTool iconv)
endif()
install(TARGETS SwitchGamesXlsxTool DESTINATION bin)
